Fixed collapsing

--- a/includes/main.css
+++ b/includes/main.css
@@ -5,6 +5,12 @@
 }
 
 @font-face {
+    font-family: "Gotham";
+    src: url("../fonts/Gotham-Bold.ttf") format("truetype");
+    font-weight: bold;
+}
+
+@font-face {
     font-family: "KG Happy Solid";
     src: url("../fonts/KGHAPPYSolid.ttf") format("truetype");
 }
@@ -51,6 +57,7 @@
     --cream: #fcf8ee;
     --dark-cream: #fbf4ea;
     --dark-cream: #fbf3e7;
+    --dark-cream: #f5ebd2;
 }
 
 body {
@@ -213,7 +220,8 @@ body.front-page section:nth-child(2):before {
 }
 
 /* --------------------------- SF SVG Animation ---------------------------- */
-/*@keyframes scroll {
+/* Clouds Move Right to Left*//*
+@keyframes scroll {
     0%   {transform: translateX(80%)}
     100% {transform: translateX(-80%)}
 }
@@ -223,6 +231,7 @@ body.front-page section:nth-child(2):before {
     100% {transform: translateX(-80%) translateY(20px)}
 }*/
 
+ /* Clouds Move Left to Right */
 @keyframes scroll {
     0%   {transform: translateX(-80%)}
     100% {transform: translateX(80%)}
@@ -259,7 +268,7 @@ body.front-page section:nth-child(2):before {
 }
 
 .cloud>path {
-    transform: rotate(-90deg);
+    transform: scale(1, -1);
 }
 
 .clouds g:nth-child(even) .cloud path {
@@ -378,11 +387,12 @@ body.resume table tr td:nth-child(1) {
     color: var(--red);
     font-weight: bold;
     font-family: 'KG Happy Solid', arial, sans-serif;
-    /*font-size: 25px;*/
+    font-size: 19px;
     text-transform: uppercase;
     vertical-align: top;
     text-align: right;
     padding-right: 25px;
+    white-space: nowrap
 }
 
 body.resume table tr td:nth-child(2) {
@@ -393,10 +403,6 @@ body.resume table tr td:nth-child(1),
 body.resume table tr td:nth-child(2) {
     padding-top: 30px;
 }
-
-/*.table-title {
-    font-weight: 500;
-}*/
 
 .skill {
     position: relative;
@@ -422,7 +428,8 @@ body.resume table tr td:nth-child(2) {
         var(--red) 10px,
         var(--red) 20px
         );
-    /*border-radius: 0 8px 8px 0;*/
+
+
     border-radius: 15px;
     -moz-animation: slideright 1s forwards; /* Firefox */
     -webkit-animation: slideright 1s forwards; /* Safari and Chrome */
@@ -452,7 +459,25 @@ body.resume table tr td:nth-child(2) {
 .ps { left: -50%; width: 30%; }
 .ill { left: -50%; width: 10%; }
 
-/* ---------------------- Override Boostrap CSS ---------------------- */
+
+.panel-heading a:after {
+    content: '\2013';
+    color: var(--red);
+    font-weight: 900;
+    margin-left: 15px;
+}
+
+.panel-heading a.collapsed:after {
+    content: '+';
+}
+
+.panel-heading a:after:hover {
+    color: var(--bright-red);
+}
+
+
+
+/*---  Override Boostrap CSS  ---*/
 .panel-title {
     font-size: 20px;
     line-height: 30px;
@@ -479,6 +504,7 @@ body.resume table tr td:nth-child(2) {
 .panel-body {
     padding-top: 0px;
 }
+/*---  End Override Boostrap CSS  ---*/
 
 /* --------------------------- About Page ---------------------------- */
 body.about main div:nth-child(2) {
